# Otus_matrix

./: CMakeLists.txt  main.cpp  matrix.h
.github/workflows/: release.yml
